diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0271]: type mismatch resolving `<NoFromClause as AppearsInFromClause<users::table>>::Count == diesel::query_source::Once`
  --> tests/fail/columns_cannot_be_rhs_of_insert.rs:20:10
   |
20 |         .execute(&mut conn)
   |          ^^^^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
note: required because of the requirements on the impl of `AppearsOnTable<NoFromClause>` for `columns::hair_color`
  --> tests/fail/columns_cannot_be_rhs_of_insert.rs:6:1
   |
6  | / table! {
7  | |     users {
8  | |         id -> Integer,
9  | |         name -> Text,
10 | |         hair_color -> Text,
11 | |     }
12 | | }
   | |_^
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<NoFromClause>` for `&columns::hair_color`
   = note: required because of the requirements on the impl of `InsertValues<users::table, _>` for `ColumnInsertValue<columns::name, &columns::hair_color>`
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
   = note: required because of the requirements on the impl of `ExecuteDsl<_, _>` for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
   = note: this error originates in the macro `$crate::__diesel_column` (in Nightly builds, run with -Z macro-backtrace for more info)
